--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>I'm a header 1!</h1>
-    Hello there Awesome Person!
+    <img src="https://avatars1.githubusercontent.com/u/57732123?v=4">
   </body>
 </html>
