--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
   <body>
     <h1>I'm a header 1!</h1>
     <img src="https://avatars1.githubusercontent.com/u/57732123?v=4">
+    <ul>
+      <li>Youtube</li>
+      <li>Google</li>
+      <li>Discord</li>
+    </ul>
   </body>
 </html>
