--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <h1>I'm a header 1!</h1>
     <img src="https://avatars1.githubusercontent.com/u/57732123?v=4">
     <ul>
-      <li>Youtube</li>
-      <li>Google</li>
-      <li>Discord</li>
+      <li><a href="https://www.youtube.com/">Youtube</a></li>
+      <li><a href="https://www.google.com/">Google</a></li>
     </ul>
   </body>
 </html>
